@@ -1906,10 +1906,16 @@ class Mosquitto:
         san = cert.get('subjectAltName')
         if san:
             have_san_dns = False
-            for ((key,value),) in san:
+            print(san.count)
+            for ((key,value)) in san:
+                print(key+" "+value)
                 if key == 'DNS':
                     have_san_dns = True
                     if value == self._host:
+                        return
+                if key == 'IP Address':
+                    have_san_dns = True
+                    if value.lower() == self._host.lower():
                         return
 
             if have_san_dns:
@@ -1919,7 +1925,7 @@ class Mosquitto:
         if subject:
             for ((key,value),) in subject:
                 if key == 'commonName':
-                    if value == self._host:
+                    if value.lower() == self._host.lower():
                         return
 
         raise ssl.SSLError('Certificate subject does not match remote hostname.')
