@@ -7,6 +7,7 @@ Broker:
 
 Client library:
 - Fix support for Python 2.6, 3.0, 3.1.
+- Fix TLS subjectAltName verification and segfaults.
 
 1.2 - 20130708
 ==============
